--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
