--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "cors": "^2.8.5",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
