--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.1",
     "cors": "^2.8.5",
+    "mongoose": "^8.0.1",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
     "react": "^18",
